--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
+# ignore rendered files 
+*ON_Dashboard.Rmd
+*ON_Dashboard.html
+
+
 # Dataset folder 
-/datasets/
+*datasets/
 
 
 # History files
